<resources>
    <string name="app_name">Роствертол</string>

    <string name="home_string">Главная страница</string>
    <string name="news_string">Новости</string>
    <string name="trud_string">За доблестный труд</string>
    <string name="strelok_string">ФСК Стрелок</string>
    <string name="sdk_string">СДК Ростов</string>
    <string name="molodeg_string">Молодежь Роствертола</string>
    <string name="skidki_string">Скидки и акции</string>
    <string name="notif_string">События</string>


    <string name="m1">Январь</string>
    <string name="m2">Февраль</string>
    <string name="m3">Март</string>
    <string name="m4">Апрель</string>
    <string name="m5">Май</string>
    <string name="m6">Июнь</string>
    <string name="m7">Июль</string>
    <string name="m8">Август</string>
    <string name="m9">Сентябрь</string>
    <string name="m10">Октябрь</string>
    <string name="m11">Ноябрь</string>
    <string name="m12">Декабрь</string>

    <string name="news">Новости</string>
    <string name="celendar">Календарь</string>
    <string name="contacts">Контакты</string>
    <string name="uslugi">Услуги</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>
    <string name="menu">Меню</string>

    <string name="Zay">Подать заявку</string>

    <string name="ContMol">(863)300 48 44</string>
    <string name="ContMol2">E-mail: rostvert_ms@mail.ru</string>

    <string name="ContSDK">+7(863)243-18-74</string>
    <string name="ContSDK2">
    344038,  г.Ростов-на-Дону, ул. Ленина 105/3 </string>


    <string name="STat" formatted="false">
            Поздравить городских медиков с их профессиональным праздником пришли почетные гости —  министр здравоохранения Ростовской области Татьяна Быковская, глава Администрации города Ростова-на-Дону Виталий Кушнарев и заместитель председателя Ростовской-на-Дону городской Думы Сергей Сухариев.\n

        Лучшие представители профессии блеснули своими талантами: остроумием, хореографией, вокалом, кулинарным искусством. Зрители и болельщики активно поддержали участников программы.\n

        Торжественный прием продолжили лучшие творческие коллективы города с разнообразными номерами.
</string>
    <string name="Akv" formatted="false">
    В период с 17.04.2017г. по 30.04.2017г. купи билеты в Аквапарк H2O по следующим фиксированному тарифу:\n
    Тариф «Будний Online -50%» — Аква+Термы на весь день за 750 рублей;\n
    Тариф «Выходной Online -50%» — Аква+Термы на весь день за 950 рублей;\n
    Использовать билет необходимо в период с 01.05.2017г. по 31.05.2017г. включительно.
</string>
    <string name="text1">
Человек — это такое бытие в мире,
        которое, пребывая в бытии, сопряжено с бытием — озабочено им, печется о нем,
        задается вопросом о нем и вопрошает его.\n

Мартин Хайдеггер
    </string>
    <string name="text2">
Не думаю, что люди принимают такой простой факт: в жизни нет смысла.
        Мне кажется, из-за этого людям страшно неуютно.
Мы привыкли жить во мраке. Ежедневно мы, толкаясь локтями,
        подходим к занавесу и смотрим через узенькие щёлки, манящие светом, в зрительный зал.
        И каждый видит какую-то свою часть.\n Д.Линч
    </string>
    <string name="text3">
Одиночество — это некий абсолют.
        Единственное существующее.
        Все остальное плод нашего воображения.
        Иллюзия. Помни об этом. И старайся поступать соответственно.
        Не жди для себя ничего, кроме самого худшего.
        Если случится что-то приятное, тем лучше.
        Не надейся, что ты сможешь покончить с одиночеством. Оно абсолютно.
        Можно, конечно, придумывать разного рода единение,
        но выдумки останутся выдумками — про религию, политику, любовь, искусство и так далее.
        Одиночество тотально. Ловушка же в том, что единение иногда представляется достигнутым.
        Знай, что это тоже иллюзия. Тогда тебя не постигнет столь тяжкое разочарование,
        когда все вернется к обычному порядку вещей. Нужно научиться жить со знанием,
        что одиночество абсолютно. Тогда ты не будешь больше жаловаться, перестанешь ныть и скулить.
        Тогда придет к тебе спокойствие,
        ты обретешь опору внутри себя и научишься принимать бессмыслицу как нечто должное.  \n

Ингмар Бергман
    </string>
    <string name="text4">
        Когда тебе не с кем поделиться одинокими мыслями, мысли начинают делить тебя между собой. \n

Харуки Мураками

    </string>
    <string name="text5">
« задумывался ли ты когда-нибудь, что где-то там,
        в самой сокровенной, тайной и недосягаемой части Вселенной,
        есть человек, который создан для тебя? \n

я не верю в это.\n

я не верю в это, потому что не имеет значения,
        насколько хорошо ты будешь относиться к людям,
        постепенно отдавая всего себя, ведь правда такова — они всегда будут разочаровывать тебя.
        я потратил столько времени, отдав свою любовь тому, кто нуждался во мне.
        но никто из них не сделал так, чтобы свет вновь загорелся в моей душе.
        я отдавался полностью тому, кому уже кто-то отдался всем разумом и телом ранее.
        правда в том, что люди не понимают, что нельзя просто так сломать кому-то сердце,
        а затем вернуться, как будто ничего не было. часть моей яркой,
        красивой и светлой души была захвачена кем-то, кто имел тьму и страх в них самих. \n

когда ты влюблен, ты чувствуешь себя настолько неуязвимым.
        ты чувствуешь, как будто ты можешь дышать под водой.
        любовь — это желание остановить время и жить этим моментом до конца своей жизни.
        ты всегда будешь задаваться вопросом, если они захотят оставить тебя.
        ты тратишь так много времени, думая о том, что, возможно, они подумают, что ты хочешь уйти от них.
        но уходишь не ты, а они. \n

ты перестал удивляться тому, что они оставляют тебя.\n

на этом этапе ты застрял, не найдя любовь, которую ты заслуживаешь.
        ты предпочел оставлять синяки на своей коже. ты искал и искал, а теперь ты сдался.
        ты отказался от мысли о любви. в твоей яркой, красивой и светлой душе больше не появится свет. »
    </string>

    <string name="text6">

    Burning papers into ashes, \n
    What a season, how they fly high from the ground ohh \n
    There is yet another fountain, flowing over, as the night falls, \n
    Keep dreaming away \n
    If you hold on to that past, \n
    Dont you lock yourself inside, \n
    Nothing has been done before \n
    Its the most virgin dress you could possibly wear \n
    Mess it up, time is up \n
    Hold your memory for a moment with a blind hand \n
    Write some stories for tomorrow \n
    From the bottle of amnesia \n
    Find instructions, to salvation, to oblivion, supreme \n
    Dont be tempted to look back \n
    It has all happen before \n
    Someday miraculous spread will forgive \n
    every cowardly thing that youve done /
    That Ive done \n
    Dust it off \n
    (That youve done \n
    That weve done) \n
     \n
    Сжигая бумагу в пепел, \n
    Самое время смотреть, как он летит высоко над землей.\n
    Есть ещё один фонтан, перетекающий через край с наступлением ночи. \n
    Продолжай мечтать. \n
    Если ты держишься за прошлое,\n
    Не запирайся внутри. \n
    Ничего не случалось прежде,\n
    Это самое невинное платье, что ты в принципе могла бы надеть. \n
    Напортачь! Время вышло. \n
    На миг отгородившись от воспоминаний, \n
    Напиши пару историй на завтра. \n
    Из сосуда забытья \n
    Найди инструкции к спасению, к прощению Всевышним. \n
    Не поддавайся искушению оглянуться назад,\n
    Такое уже случалось раньше.\n
    Когда-нибудь чудесным образом ты будешь прощен
        За каждый трусливый поступок, совершённый тобой, \n
    Совершённый мной. \n
    Покончи с этим \n
    (С тем, что ты сделал, \n
    С тем, что сделали мы.)
    </string>

    <string name="text7">
6. 15 Мая \n
9.57 утра \n
Бла, бла, бла... Я уже второй день веду этот дневник, не чувствую будто пишу что-то стоящее. Я нашел книгу в библиотеке, о том как правильно вести дневник. Да да, не волнуйся. Никто не видел, как я её читал. И в ней сказано, что даже если ты не хочешь, просто продолжай это делать, просто продолжай писать. Писать первое, что приходит тебе в голову. Просто писать чепуху, бред, так что.....
Хорошо, я не буду превращать все в отстой. Я попытаюсь и "поделюсь" каким-нибудь дерьмом. Хотя я стараюсь не говорить о подобных вещах и даже не думать, и я сейчас попытаюсь не быть сломанной пластинкой, но я все ещё на 100 процентов не смирился с местом, в котором нахожусь. Плюс, оно пока не помогает, ибо ОН все ещё в режиме атаки. Я "просыпаюсь" и уже ем завтрак. Существовавшая ранее чёткая граница между временем, когда я бодрствую и сплю, с каждым разом становится все расплывчатее. ЕГО план - пошатнуть мой баланс, и это работает. ЧЕРТ. Я знаю, ты тоже об этом думаешь... Все стало сложнее, чем я думал.
Еще сильнее вводит меня в депрессию то, что ОН продолжает твердить мне, что ОН знает - это лишь вопрос времени . ОН сказал, что ОН должен просто сидеть и наслаждаться комбинезоном, потому что я расколюсь сам по себе. ОН думает, я не смогу со всем справиться, что я ни в коем случае не смогу смириться с этим посредственным существованием. Возможно ОН прав. Или мне стоит вспомнить о морфине и думать, что это была вишенка на торте по сравнению с этим местом? Не буду врать, но я действительно в какой то степени скучаю по своей старой жизни. Даже не знаю, можно ли назвать сейчас моё существование жизнью. Я чувствую себя зомби, которого заточили в мире видео-игры с кучей других зомби, проживающих симуляцию жизни, которую контролируют матричные роботы-лорды. Действительно ли я сейчас не сплю? Действительно ли сейчас все это происходит?
Может я должен дать слабины... не только я понимаю, что на самом деле я с собой здесь сделал. Я все еще перевариваю все, что произошло за последние несколько дней....твою мать, за последние ШЕСТЬ месяцев...и все они начались и закончились вместе с НИМ. Я все ещё не могу в это поверить, хотя нет, я все таки могу. Все это имеет смысл. Что не имеет смысл, так это, если я стал причиной всего происходящего, всего, почему я не могу избавиться от НЕГО? Как получилось, что он так сильно за меня держится...почему я позволяю ЕМУ держаться?
    </string>

    <string name="title_activity__stati">Activity_Stati</string>


    <string name="dialog_message">
        Иванов Петр Васильевич \n
        Тел. 89087074038 \n
        E-mail ivp@gmail.com
    </string>

    <string-array name="list">
        <item>
            Statia 1
        </item>
        <item>
            Statia 2
        </item>
        <item>
            Statia 3
        </item>
        <item>
            Statia 4
        </item>
        <item>
            Statia 5
        </item>
    </string-array>

    <string-array name="list2">
        <item>
            Cat 1
        </item>
        <item>
            Cat 2
        </item>
        <item>
            Cat 3
        </item>
        <item>
            Cat 4
        </item>
        <item>
            Cat 5
        </item>
    </string-array>

    <string name="search_hint">Поиск контактов</string>

    <string name="add">Add</string>
    <string name="text">Enter text</string>
    <string name="no_records">There are no records in the table</string>
    <string name="search">Search</string>
</resources>
