<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White">

    <TextView
        android:id="@+id/nameC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="Выберите месяц"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="20sp"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="4">

        <TableRow android:weightSum="3"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:background="@color/Gray_light">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/m1"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:id="@+id/january"
                    android:layout_marginRight="1dp"
                    android:layout_marginBottom="1dp"
                    android:background="@color/White"/>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/m2"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:id="@+id/february"
                    android:layout_marginRight="1dp"
                    android:layout_marginBottom="1dp"
                    android:background="@color/White"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/m3"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:id="@+id/march"
                    android:layout_marginBottom="1dp"
                    android:background="@color/White"
                    android:clickable="true"
                    />

        </TableRow>
        <TableRow android:weightSum="3"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@color/Gray_light">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/m4"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_marginBottom="1dp"
                    android:layout_marginRight="1dp"
                    android:id="@+id/april"
                    android:background="@color/White"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/m5"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_marginBottom="1dp"
                    android:layout_marginRight="1dp"
                    android:id="@+id/may"
                    android:background="@color/White"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/m6"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_marginBottom="1dp"
                    android:id="@+id/june"
                    android:background="@color/White"/>

        </TableRow>
        <TableRow android:weightSum="3"
            android:layout_weight="1"
            android:background="@color/Gray_light">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/m7"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_marginBottom="1dp"
                    android:layout_marginRight="1dp"
                    android:id="@+id/july"
                    android:background="@color/White"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/m8"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_marginBottom="1dp"
                    android:layout_marginRight="1dp"
                    android:id="@+id/august"
                    android:background="@color/White"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/m9"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_marginBottom="1dp"
                    android:id="@+id/september"
                    android:background="@color/White"/>

        </TableRow>
        <TableRow android:weightSum="3"
            android:layout_weight="1"
            android:background="@color/Gray_light">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/m10"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_marginRight="1dp"
                    android:id="@+id/october"
                    android:background="@color/White"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/m11"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_marginRight="1dp"
                    android:id="@+id/november"
                    android:background="@color/White"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/m12"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:id="@+id/december"
                    android:background="@color/White"/>

        </TableRow>
    </TableLayout>
</LinearLayout>


