<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="4"
    android:background="@color/Gray_light">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/news"
            android:textSize="@dimen/textSize"
            android:gravity="center"
            android:textColor="@color/Black"
            android:layout_weight="1"
            android:background="@color/White"
            android:id="@+id/bu1"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/celendar"
            android:textSize="@dimen/textSize"
            android:gravity="center"
            android:textColor="@color/Black"
            android:layout_marginTop="1dp"
            android:layout_weight="1"
            android:background="@color/White"
            android:id="@+id/bu2"

            />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contacts"
        android:textSize="@dimen/textSize"
        android:gravity="center"
        android:textColor="@color/Black"
        android:background="@color/White"
        android:layout_marginTop="1dp"
        android:layout_weight="1"
        android:id="@+id/bu3"

        />

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/uslugi"
    android:textSize="@dimen/textSize"
    android:gravity="center"
    android:textColor="@color/Black"
    android:background="@color/White"
    android:layout_marginTop="1dp"
    android:layout_weight="1"
    android:id="@+id/bu4"

    />

</LinearLayout>