<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Gray_light"
    >
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="200dp">
 </LinearLayout>


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="3">
<TableRow
    android:layout_weight="1"
    android:weightSum="2"
    android:layout_width="match_parent"
    >
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/White"
        android:layout_margin="1dp"
        android:orientation="vertical"
        android:paddingTop="30dp"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_strikethrough_s_black_24dp"
             />
        <TextView
            android:paddingTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/news_string"
            android:textSize="20sp"
            android:gravity="center"
        />
        </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/White"
        android:layout_margin="1dp"
        android:orientation="vertical"
        android:paddingTop="30dp"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_announcement_black_24dp"
            />
        <TextView
            android:paddingTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/trud_string"
            android:textSize="20sp"
            android:gravity="center"
            />
    </LinearLayout>

</TableRow>
    <TableRow
        android:layout_weight="1"
        android:weightSum="2"
        android:layout_width="match_parent"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/White"
            android:layout_margin="1dp"
            android:orientation="vertical"
            android:paddingTop="30dp"
            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_music_note_black_24dp"
                />
            <TextView
                android:paddingTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/strelok_string"
                android:textSize="20sp"
                android:gravity="center"
                android:lines="2"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/White"
            android:layout_margin="1dp"
            android:orientation="vertical"
            android:paddingTop="30dp"
            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_ac_unit_black_24dp"
                />
            <TextView
                android:paddingTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sdk_string"
                android:textSize="20sp"
                android:gravity="center"
                />
        </LinearLayout>

    </TableRow>

    <TableRow
        android:layout_weight="1"
        android:weightSum="2"
        android:layout_width="match_parent"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/White"
            android:layout_margin="1dp"
            android:orientation="vertical"
            android:paddingTop="30dp"
            >
            <ImageView
                android:paddingTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_message_black_24dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/molodeg_string"
                android:textSize="20sp"
                android:gravity="center"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/White"
            android:layout_margin="1dp"
            android:orientation="vertical"
            android:paddingTop="30dp"

            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_home_black_24dp"
                />
            <TextView
                android:paddingTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/skidki_string"
                android:textSize="20sp"
                android:gravity="center"
                 />
        </LinearLayout>
    </TableRow>
    </TableLayout>
</LinearLayout>